# eragent

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
api/: __init__.py  main.py
api/routes/: __init__.py  analyze.py
api/schemas/: __init__.py  analysis.py
config/: __init__.py  config.yaml  settings.py
core/: __init__.py  memory.py
core/database/: __init__.py  engine.py  init_db.py  models.py  repository.py
core/knowledge/: __init__.py  graph.py  vector_store.py
core/ontology/: __init__.py  loader.py  reasoner.py
core/orchestrator/: __init__.py  intent.py  orchestrator.py
docs/: erp_agent_spec.md  execute.md  thought.md
modules/: __init__.py
modules/p2p/: __init__.py  agent.py  tools.py
modules/p2p/mock_data/: __init__.py  generator.py
modules/p2p/ontology/: p2p.owl
modules/p2p/rules/: __init__.py  payment_compliance.py  price_variance.py  supplier_performance.py  three_way_match.py
tests/: conftest.py
tests/http/: test_api.http
tests/integration/: test_agent.py  test_api.py  test_api_extra.py  test_e2e.py
tests/unit/: test_agent_extra.py  test_config.py  test_generator.py  test_intent.py  test_knowledge_graph.py  test_long_term_memory.py  test_memory.py  test_ontology.py  test_ontology_extra.py  test_orchestrator.py  test_repository.py  test_rules.py  test_schemas.py  test_tools.py  test_vector_store.py
